# ray_tracer_rust

./: .gitattributes  .gitignore  Cargo.toml  README.md  bench_camera.txt  bench_intersections.txt  bench_matrix.txt  bench_render.txt  bench_tuple.txt  optimization_list.md  run_benchmark.ps1
.cargo/: config.toml
benches/: benchmarks.rs  camera.rs  intersections.rs  matrix.rs  matrix_new.rs  render.rs  tuple.rs
ray_tracer/: Cargo.toml
ray_tracer/src/: camera.rs  canvas.rs  colors.rs  image.rs  intersections.rs  lib.rs  lights.rs  materials.rs  matrices.rs  patterns.rs  points.rs  rays.rs  shapes.rs  shapes2.rs  transformations.rs  tuples.rs  utils.rs  vectors.rs  world.rs
ray_tracer/src/patterns/: checker.rs  gradient.rs  rings.rs  solid.rs  stripes.rs  test_pattern.rs
ray_tracer/src/shapes/: plane.rs  sphere.rs  test_shape.rs
src/: image.rs  lib.rs  main.rs  tuples.rs
src/cannon/: cannon.rs
src/cannon_ppm/: cannon_ppm.rs
src/ch10_pit/: ch10_pit.rs
src/ch3_pit/: ch3_pit.rs
src/ch4_pit/: ch4_pit.rs
src/ch5_pit/: ch5_pit.rs
src/ch6_pit/: ch6_pit.rs
src/ch7_pit/: ch7_pit.rs
src/ch8_pit/: ch8_pit.rs
src/ch9_pit/: ch9_pit.rs
src/ray_tracer/: camera.rs  canvas.rs  colors.rs  intersections.rs  lights.rs  materials.rs  matrices.rs  matrices_new.rs  mod.rs  patterns.rs  rays.rs  shapes.rs  shapes_test.rs  shapes_tree.rs  transformations.rs  tuples.rs  tuples_new.rs  tuples_old.rs  utils.rs  world.rs
src/ray_tracer/patterns/: checker.rs  gradient.rs  rings.rs  solid.rs  stripes.rs  test_pattern.rs
src/ray_tracer/shapes/: cone.rs  cube.rs  cylinder.rs  group.rs  group_backup.rs  plane.rs  (+2 more)
(+7 files in other folders)
