[package]
name = "ray_tracer_rust"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
panic = "abort"

[profile.release_debug_info]
inherits = "release"
debug = true

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
image = "0.24.5"
dyn-clonable = "0.9.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "matrix"
harness = false

[[bench]]
name = "render"
harness = false

[[bench]]
name = "camera"
harness = false

[[bench]]
name = "tuple"
harness = false

[[bench]]
name = "intersections"
harness = false

